# ImageStitching

./: .gitignore  README.md  pubspec.yaml  setup_opencv_android.bat
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: stitcher.cpp
android/app/src/main/kotlin/com/simplr/shelf_monitor_app/: MainActivity.kt  NativeStitcher.kt
lib/: main.dart
lib/screens/: camera_screen.dart  capture_screen.dart  home_screen.dart  panorama_screen.dart  video_capture_screen.dart
lib/services/: frame_analysis_isolate.dart  native_stitch_service.dart  professional_stitch_isolate.dart  stitch_api_service.dart  stitch_isolate.dart  stitch_service.dart  video_stitch_isolate.dart
lib/widgets/: dot_guide.dart  focus_indicator.dart
test/: widget_test.dart
